- ad showing code removed - code compiled and run in android studio 3.6

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,7 +25,7 @@
     <string name="add_new_dialog_btnSave">Save</string>
 
     <string name="splash_greeting">Welcome to Stay Grateful</string>
-    <string name="splash_company">BT IT Solutions (+251 911 84 20 52)</string>
+    <string name="splash_company">BT IT Solutions (+1 864 494 1836)</string>
 
     <string name="set_reminder_dialog_title">Set Reminder</string>
     <string name="set_reminder_dialog_chkTiming">Set reminder for tomorrow this time</string>
